--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,16 @@
   <title>DamawashAngular</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="assets/w3.css"/>
+  <!--<script src="assets/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>-->
+  <!--<link href="assets/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">-->
+  <meta name="msapplication-TileColor" content="#ffffff"/>
+  <meta name="msapplication-TileImage" content="/images/icons/ms-icon-144x144.png"/>
+  <meta name="theme-color" content="#3f51b5"/>
+  <script src="assets/d587264810.js"></script>
+  <link href="assets/fonts.googleapis.css" rel="stylesheet"/> 
 </head>
 <body>
   <app-root></app-root>
