add google analytics

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y0QEMR9EJJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y0QEMR9EJJ');
+  </script>
   <meta charset="utf-8">
   <meta name="keywords" content="damawash, dubinsko čišćenje">
   <meta name="description" content="Nudimo profesionalne usluge čišćenja po Rijeci i okolici koje obavljamo koristeći najmodernije strojeve i ekološka sredstva za čišćenje.">
