--- a/src/assets/images/index.html
+++ b/src/assets/images/index.html
@@ -83,7 +83,7 @@ Nudimo profesionalne usluge čišćenja koje obavljamo koristeći najmodernije s
 
 <div class="w3-panel nota w3-padding-32 w3-roboto">
   <h3>Ponude</h3>
-  <p>Uslikajte i pošaljite (<a href="viber://contact?number=+385914182000"><span style="color:#c40db9;">Viber</span></a>, <a href="https://api.whatsapp.com/send?phone=+385914182000"><span style="color:#61ff61;">WhatsApp</span></a>, <a href="http://m.me/<PAGE_NAME>"><span style="color:#8ee3ff;">Messenger</span></a>) određenu stvar za čišćenje, a mi ćemo Vama poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku...</p>
+  <p>Uslikajte i pošaljite (<a href="viber://chat?number=%2B385914182000"><span style="color:#c40db9;">Viber</span></a>, <a href="https://api.whatsapp.com/send?phone=+385914182000"><span style="color:#61ff61;">WhatsApp</span></a>, <a href="http://m.me/<PAGE_NAME>"><span style="color:#8ee3ff;">Messenger</span></a>) određenu stvar za čišćenje, a mi ćemo Vama poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku...</p>
 </div>  
 
 <!--<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Vukovarska%2018%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">Pureblack.de - Webseite erstellen lassen</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>-->
