dodao google recenzije i ostalo

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,20 @@
   <meta name="theme-color" content="#3f51b5"/>
   <script src="assets/d587264810.js"></script>
   <link href="assets/fonts.googleapis.css" rel="stylesheet"/> 
+  <!-- Brevo Conversations {literal} -->
+  <script>
+    (function(d, w, c) {
+        w.BrevoConversationsID = '656891dcb60ea278921db11d';
+        w[c] = w[c] || function() {
+            (w[c].q = w[c].q || []).push(arguments);
+        };
+        var s = d.createElement('script');
+        s.async = true;
+        s.src = 'https://conversations-widget.brevo.com/brevo-conversations.js';
+        if (d.head) d.head.appendChild(s);
+    })(document, window, 'BrevoConversations');
+  </script>
+  <!-- /Brevo Conversations {/literal} -->
 </head>
 <body>
   <app-root></app-root>
